--- a/client/index.html
+++ b/client/index.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html lang="fr">
   <head>
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel="stylesheet" href="css/materialize.min.css">
+    <link
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="css/materialize.min.css" />
     <script type="text/javascript" src="js/materialize.min.js" defer></script>
-    <meta charset="UTF-8"/>
+    <meta charset="UTF-8" />
     <title>LIFAP5 2019-2020 - Client</title>
   </head>
 
@@ -20,18 +23,22 @@
   </div>
 
   <body>
-    <header >
+    <header>
       <nav class="nav-extended blue-grey lighten-1">
         <div class="navbar-fixed">
           <nav>
             <div class="nav-wrapper blue-grey">
-              <a href="#!" class="brand-logo  center">Quizzz<i class="material-icons right">question_answer</i></a>
+              <a href="#!" class="brand-logo  center"
+                >Quizzz<i class="material-icons right">question_answer</i></a
+              >
               <ul class="right hide-on-med-and-down">
                 <li>
                   <form>
                     <div class="input-field  blue-grey lighten-3">
-                      <input id="search" type="search" required>
-                      <label class="label-icon" for="search"><i class="material-icons">search</i></label>
+                      <input id="search" type="search" required />
+                      <label class="label-icon" for="search"
+                        ><i class="material-icons">search</i></label
+                      >
                       <i class="material-icons">close</i>
                     </div>
                   </form>
@@ -40,57 +47,65 @@
                   <i id="id-login" class="material-icons">face</i>
                 </li>
               </ul>
-            </div> <!-- nav-wrapper  -->
-          </nav> 
-        </div> <!-- navbar-fixed -->
+            </div>
+            <!-- nav-wrapper  -->
+          </nav>
+        </div>
+        <!-- navbar-fixed -->
         <div class="nav-content">
           <ul class="tabs tabs-transparent tabs-fixed-width">
-            <li class="tab"><a class="active" href="#id-all-quizzes">Tous les quizzes</a></li>
+            <li class="tab">
+              <a class="active" href="#id-all-quizzes">Tous les quizzes</a>
+            </li>
             <li class="tab"><a href="#id-my-quizzes">Mes quizzes</a></li>
             <li class="tab"><a href="#id-my-answers">Mes réponses</a></li>
           </ul>
-        </div> <!-- nav-content -->
-      </nav> <!-- nav-extended -->
+        </div>
+        <!-- nav-content -->
+      </nav>
+      <!-- nav-extended -->
     </header>
-    
+
     <main>
       <div class="container">
-      <!-- Un premier onglet pour tous les quizzes-->
-      <div id="id-all-quizzes">
-        <div class="row">      
-          <div class="col s4">
-            <div id="id-all-quizzes-list"></div>
+        <!-- Un premier onglet pour tous les quizzes-->
+        <div id="id-all-quizzes">
+          <div class="row">
+            <div class="col s4">
+              <div id="id-all-quizzes-list"></div>
+            </div>
+            <div class="col s8">
+              <div id="id-all-quizzes-main"></div>
+            </div>
           </div>
-          <div class="col s8">
-            <div id="id-all-quizzes-main"></div>
+        </div>
+        <!-- Un second onglet pour ses propres quizzes-->
+        <div id="id-my-quizzes">
+          <div class="row">
+            <div class="col s4">
+              <div id="id-my-quizzes-list">Ici le menu pour mes quizzes</div>
+            </div>
+            <div class="col s8">
+              <div id="id-my-quizzes-main">Ici le contenu pour mes quizzes</div>
+            </div>
+          </div>
+        </div>
+        <!-- Un dernier onglet pour ses propres réponses-->
+        <div id="id-my-answers">
+          <div class="row">
+            <div class="col s4">
+              <div id="id-my-answers-list">Ici le menu pour mes réponses</div>
+            </div>
+            <div class="col s8">
+              <div id="id-my-answers-main">
+                Ici le contenu pour mes réponses
+              </div>
+            </div>
           </div>
         </div>
       </div>
-      <!-- Un second onglet pour ses propres quizzes-->
-      <div id="id-my-quizzes">
-        <div class="row">      
-          <div class="col s4">
-            <div id="id-my-quizzes-list">Ici le menu pour mes quizzes</div>
-          </div>
-          <div class="col s8">            
-            <div id="id-my-quizzes-main">Ici le contenu pour mes quizzes</div>
-          </div>
-        </div>
-      </div>
-      <!-- Un dernier onglet pour ses propres réponses-->
-      <div id="id-my-answers">
-        <div class="row">      
-          <div class="col s4">
-            <div id="id-my-answers-list">Ici le menu pour mes réponses</div>
-          </div>
-          <div class="col s8">            
-            <div id="id-my-answers-main">Ici le contenu pour mes réponses</div>
-          </div>
-        </div>
-      </div>
-    </div>
     </main>
-    
+
     <footer></footer>
 
     <!-- l'ordre compte dans les scripts : ils sont lues puis interprétés DANS L'ORDRE -->
@@ -99,4 +114,3 @@
     <script type="text/javascript" src="js/app.js" defer></script>
   </body>
 </html>
-
