--- a/client/index.html
+++ b/client/index.html
@@ -1,10 +1,8 @@
 <!DOCTYPE html>
 <html lang="fr">
   <head>
-    <link
-      href="https://fonts.googleapis.com/icon?family=Material+Icons"
-      rel="stylesheet"
-    />
+    <!-- <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" /> -->
+    <link rel="stylesheet" href="css/materialicons.css" />
     <link rel="stylesheet" href="css/materialize.min.css" />
     <script type="text/javascript" src="js/materialize.min.js" defer></script>
     <meta charset="UTF-8" />
@@ -28,17 +26,13 @@
         <div class="navbar-fixed">
           <nav>
             <div class="nav-wrapper blue-grey">
-              <a href="#!" class="brand-logo  center"
-                >Quizzz<i class="material-icons right">question_answer</i></a
-              >
+              <a href="#!" class="brand-logo  center">Quizzz<i class="material-icons right">question_answer</i></a>
               <ul class="right hide-on-med-and-down">
                 <li>
                   <form>
                     <div class="input-field  blue-grey lighten-3">
                       <input id="search" type="search" required />
-                      <label class="label-icon" for="search"
-                        ><i class="material-icons">search</i></label
-                      >
+                      <label class="label-icon" for="search"><i class="material-icons">search</i></label>
                       <i class="material-icons">close</i>
                     </div>
                   </form>
@@ -67,14 +61,15 @@
     </header>
 
     <main>
-      <div class="container">
+      <div>
+        <!-- class="container" -->
         <!-- Un premier onglet pour tous les quizzes-->
         <div id="id-all-quizzes">
           <div class="row">
-            <div class="col s4">
+            <div class="col l4">
               <div id="id-all-quizzes-list"></div>
             </div>
-            <div class="col s8">
+            <div class="col l8">
               <div id="id-all-quizzes-main"></div>
             </div>
           </div>
@@ -82,25 +77,13 @@
         <!-- Un second onglet pour ses propres quizzes-->
         <div id="id-my-quizzes">
           <div class="row">
-            <div class="col s4">
-              <div id="id-my-quizzes-list">Ici le menu pour mes quizzes</div>
-            </div>
-            <div class="col s8">
-              <div id="id-my-quizzes-main">Ici le contenu pour mes quizzes</div>
-            </div>
+            <h3>Ici le contenu pour mes quizzes</h3>
           </div>
         </div>
         <!-- Un dernier onglet pour ses propres réponses-->
         <div id="id-my-answers">
           <div class="row">
-            <div class="col s4">
-              <div id="id-my-answers-list">Ici le menu pour mes réponses</div>
-            </div>
-            <div class="col s8">
-              <div id="id-my-answers-main">
-                Ici le contenu pour mes réponses
-              </div>
-            </div>
+            <h3>Ici le contenu pour mes réponses</h3>
           </div>
         </div>
       </div>
@@ -108,7 +91,17 @@
 
     <footer></footer>
 
+    <footer class="page-footer grey darken-1">
+      <div class="footer-copyright">
+        <div class="container">
+          CC BY-NC-SA 3.0 FR
+          <a class="grey-text text-lighten-4 right" href="https://lifap5.univ-lyon1.fr/">lifap5.univ-lyon1.fr</a>
+        </div>
+      </div>
+    </footer>
+
     <!-- l'ordre compte dans les scripts : ils sont lues puis interprétés DANS L'ORDRE -->
+    <script type="text/javascript" src="js/websocket.js" defer></script>
     <script type="text/javascript" src="js/modeles.js" defer></script>
     <script type="text/javascript" src="js/vues.js" defer></script>
     <script type="text/javascript" src="js/app.js" defer></script>
