--- a/client/index.html
+++ b/client/index.html
@@ -49,9 +49,9 @@
         <div class="nav-content">
           <ul class="tabs tabs-transparent tabs-fixed-width">
             <li class="tab">
-              <a class="active" href="#id-all-quizzes">Tous les quizzes</a>
+              <a class="active" href="#id-all-quizzes">Tous les quiz</a>
             </li>
-            <li class="tab"><a href="#id-my-quizzes">Mes quizzes</a></li>
+            <li class="tab"><a href="#id-my-quizzes">Mes quiz</a></li>
             <li class="tab"><a href="#id-my-answers">Mes réponses</a></li>
           </ul>
         </div>
@@ -77,7 +77,7 @@
         <!-- Un second onglet pour ses propres quizzes-->
         <div id="id-my-quizzes">
           <div class="row">
-            <h3>Ici le contenu pour mes quizzes</h3>
+            <h3>Ici le contenu pour mes quiz</h3>
           </div>
         </div>
         <!-- Un dernier onglet pour ses propres réponses-->
